# UI_INDEX

./: .env.example  .gitignore  .mailmap  .zenodo.json  AUDIT_v1.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CATALOG.md  FEC_COMPARISON.md  NEXT_STAGE.md  OPTIMIZATIONS.md  README.md  SECURITY.md  SPRINT.md  SUPPORT.md  about.html  api_client.py  conftest.py  employer_contribution_gap.py  fec_integration_v251d.py  fetch_bls_baselines.py  fetch_county_data.py  fetch_dol_sui_rates.py  fetch_fred_inflation.py  fetch_housing.py  fetch_usaspending.py  generate_context_figure.py  generate_county_map.py  generate_employer_gap_charts.py  generate_fec_charts.py  generate_figures.py  generate_notebooks.py  generate_plotly_charts.py  generate_rvi_figure.py  generate_spending_accountability.py  index.html  methodology.html  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/workflows/: pages.yml  (+2 more)
dashboard/: app.py
data/: county_data.json  dmv_macro_baselines.csv
docs/: ENVIRONMENT_ARCHITECTURE.md  Slicers_and_Drilldown_Strategy.md
interactive/: fig01_bai.html  fig02_wbi.html  fig03_mipi.html  fig04_housing.html  fig05_employer_per_emp.html  fig06_employer_aggregate.html  fig07_wage_base.html  fig08_rvi.html  fig11_fec_totals.html  fig12_fec_biz_labor.html  fig13_fec_mix.html
maps/: dmv_counties.html
notebooks/: 01_data_pipeline.ipynb  02_political_layer_analysis.ipynb  02_ui_index_analysis.ipynb  03_political_layer.ipynb  04_county_gis.ipynb
src/: __init__.py  api_client.py  core_engine.py  delta_analyzer.py  employer_models.py  fec_integration_raw_investigative.py  fec_pipelines.py  fec_quick_test.py  political_layer_analyzer.py  political_layer_builder.py
tests/: test_core_math.py  test_data_integrity.py  test_political.py
tools/: fetch_bls_baselines.py  fetch_county_data.py  fetch_dol_sui_rates.py  fetch_fred_inflation.py  fetch_housing.py  fetch_usaspending.py  generate_context_figure.py  generate_county_map.py  generate_figures.py  generate_notebooks.py  generate_plotly_charts.py  generate_rvi_figure.py  (+1 more)
(+22 files in other folders)
