[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ui-index"
version = "0.1.0"
description = "UI_INDEX forensic analytics package — The Stagnant Safety Net"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1,<3.0",
        "numpy>=1.26",
            "matplotlib>=3.8",
                "seaborn>=0.13",
                    "tabulate>=0.9",
                        "python-dotenv>=1.0",
                            "requests>=2.31",
                            ]

                            [tool.setuptools.packages.find]
                            where = ["."]
                            include = ["src*"]

                            [tool.pytest.ini_options]
                            testpaths = ["tests"]
                            addopts = "--tb=short"

                            # NOTE: All commands must be run from the repository root (the directory containing
                            # this file) so that `from src import ...` resolves correctly.
                            # Example: python -m src.core_engine     (from repo root only)
